syntax = "proto3";

option go_package = "./article";

// The service definition.
service ArticleServices {
    rpc AddArticle      (AddArticleReq)     returns (Article) {}
    rpc GetArticleByID  (GetArticleByIdReq) returns (GetArticleByIdRes) {}
    rpc GetArticleList  (GetArticleListReq) returns (GetArticleListRes) {}
    rpc UpdateArticle   (UpdateArticleReq)  returns (UpdateArticleRes) {}
    rpc DeleteArticle   (DeleteArticleReq)  returns (DeleteArticleRes) {} 
}

message AddArticleReq {
    string authorId = 1;
	Post Content = 2; 
}

message Post {
    string Title = 1;
	string Body = 2;
}

message Article {
    string Id = 1;
	Post Content = 2;   
	string AuthorId = 3;
	string Created_at = 4;
	string Updated_at = 5;
	string Deleted_at = 6;
}

message GetArticleByIdReq {
    string Id = 1;
}

message GetArticleByIdRes {
    message Author {
		string Id = 1;
		string Fullname = 2;
		string Created_at = 3;
		string Updated_at = 4;
		string Deleted_at = 5;
	}
	string Id = 1;
	Post Content = 2;   
	Author Authori = 3;
	string Created_at = 4;
	string Updated_at = 5;
	string Deleted_at = 6;
}

message GetArticleListReq {
    int32 Offset = 1;
    int32 Limit = 2;
    string Search = 3;
}

message GetArticleListRes {
    repeated Article Articles = 1;
}

message UpdateArticleReq {
    string Id = 1;
    Post Content = 2;
}

message UpdateArticleRes {
	message Author {
		string Id = 1;
		string Fullname = 2;
		string Created_at = 3;
		string Updated_at = 4;
		string Deleted_at = 5;
	}
    string Id = 1;
	Post Content = 2;   
	Author Authori = 3;
	string Created_at = 4;
	string Updated_at = 5;
	string Deleted_at = 6;
}

message DeleteArticleReq {
    string Id = 1;
}

message DeleteArticleRes {
    string Id = 1;
	Post Content = 2;   
	string AuthorId = 3;
	string Created_at = 4;
	string Updated_at = 5;
	string Deleted_at = 6;
}
